Add documentation for /task
